--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "start": "npm run build && nodemon src/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/wellstsai/enroute#readme",
   "dependencies": {
+    "express": "^4.16.2",
+    "helmet": "^3.11.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
