webpack babel and react router set up

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "npm run build && nodemon src/server/server.js"
+    "build": "webpack --config webpack.config.js --display-error-details",
+    "start": "npm run build && nodemon src/server/server.js",
+    "test:lint": "eslint --ext .jsx,.js ."
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,8 @@
     "express": "^4.16.2",
     "helmet": "^3.11.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
