--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js --display-error-details",
     "start": "npm run build && nodemon src/server/server.js",
+    "start:dev": "npm run build && webpack-dev-server",
     "test:lint": "eslint --ext .jsx,.js ."
   },
   "repository": {
@@ -22,6 +23,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "helmet": "^3.11.0",
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
@@ -31,6 +33,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.10",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
@@ -38,6 +41,9 @@
     "eslint-plugin-react": "^7.6.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   }
